添加jdk11自适应